fix some naming and formatting, fix all feasible warnings