@@ -1,7 +1,6 @@
 package edu.bsu.cs.services;
 
 import com.github.twitch4j.helix.domain.User;
-import com.google.api.services.youtube.YouTube;
 import com.google.api.services.youtube.model.ChannelListResponse;
 import edu.bsu.cs.api.ApiContext;
 
@@ -70,7 +69,7 @@ public class ProfilePictureService {
         return (searchResponse != null
                 && searchResponse.getItems() != null
                 && !searchResponse.getItems().isEmpty())
-                ? searchResponse.getItems().get(0).getId().getChannelId()
+                ? searchResponse.getItems().getFirst().getId().getChannelId()
                 : null;
     }
 
@@ -80,7 +79,7 @@ public class ProfilePictureService {
                 || response.getItems().isEmpty()) {
             return null;
         }
-        return response.getItems().get(0)
+        return response.getItems().getFirst()
                 .getSnippet()
                 .getThumbnails()
                 .getHigh()
